# tasty_cmake_example

./: CMakeLists.txt  main.cpp
detail/: CMakeLists.txt  detail1.cpp  detail1.hpp  detail2.cpp  detail2.hpp
